--- a/_includes/social.html
+++ b/_includes/social.html
@@ -16,6 +16,9 @@
             {%- if site.github_username -%}
             <a href="https://github.com/{{ site.github_username }}" title="GitHub"><i class="fab fa-github"></i></a>
             {% endif %}
+            {%- if site.youtube_id -%}
+            <a href="https://youtube.com/channel/{{ site.youtube_id }}" title="Youtube"><i class="fab fa-youtube"></i></a>
+            {% endif %}
             {%- if site.linkedin_username -%}
             <a href="https://www.linkedin.com/in/{{ site.linkedin_username }}" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
             {% endif %}
