--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -10,23 +10,37 @@
           {%- if project.img %}
             {%- include figure.html 
               path=project.img 
+              width=300
+              height=200
               alt="project thumbnail" -%}
           {%- endif %}
           <div class="card-body">
-            <h2 class="card-title text-lowercase">{{ project.title }}</h2>
+            <h5 class="card-title text-lowercase">{{ project.title }}</h5>
             <p class="card-text">{{ project.description }}</p>
-            <div class="row ml-1 mr-1 p-0">
+            <div class="row ml-0 mr-1 p-0">
               {%- if project.github -%}
-              <div class="github-icon">
-                <div class="icon" data-toggle="tooltip" title="Code Repository">
-                  <a href="{{ project.github }}"><i class="fab fa-github gh-icon"></i></a>
+              <div class="col-0">
+                <div class="github-icon">
+                  <div class="icon" data-toggle="tooltip" title="Code Repository">
+                    <a href="{{ project.github }}"><i class="fab fa-github gh-icon"></i></a>
+                  </div>
+                  {%- if project.github_stars -%}
+                  <span class="stars" data-toggle="tooltip" title="GitHub Stars">
+                    <i class="fas fa-star"></i>
+                    <span id="{{ project.github_stars }}-stars"></span>
+                  </span>
+                  {%- endif %}
                 </div>
-                {%- if project.github_stars -%}
-                <span class="stars" data-toggle="tooltip" title="GitHub Stars">
-                  <i class="fas fa-star"></i>
-                  <span id="{{ project.github_stars }}-stars"></span>
-                </span>
-                {%- endif %}
+              </div>
+              {%- endif %}
+              
+              {%- if project.youtube -%}
+              <div class="col-3">
+                <div class="github-icon">
+                  <div class="icon" data-toggle="tooltip" title="Project Youtube video">
+                  <a href="https://youtu.be/{{ project.youtube }}"><i class="fab fa-youtube gh-icon"></i></a>
+                  </div>
+                </div>
               </div>
               {%- endif %}
             </div>
