--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -5,9 +5,13 @@ layout: default
 <!-- about.html -->
       <div class="post">
         <header class="post-header">
-          <h1 class="post-title">
-           {% if site.title == "blank" -%}<span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}{%- else -%}{{ site.title }}{%- endif %}
-          </h1>
+          <h3 class="post-title">
+           {% if site.title == "blank" -%} 
+           {% if site.first_name_cn -%} 
+            {{ site.last_name_cn }}{{ site.first_name_cn }},
+           {%- endif %}
+           <span class="font-weight-bold">{{ site.first_name }}</span> {{ site.middle_name }} {{ site.last_name }}{%- else -%}{{ site.title }}{%- endif %}
+          </h3>
           <p class="desc">{{ page.subtitle }}</p>
         </header>
 
@@ -25,6 +29,12 @@ layout: default
               alt=page.profile.image 
               -%}
             {% endif -%}
+            <!-- {% include social.html %} -->
+            <a href="wyl410922@qq.com">Email</a>
+            <a href="https://github.com/yanliang-wang">Github</a>
+            <a href="https://youtube.com/channel/UCo3nTD83zMDl3ZSwxRlepDw">Youtube</a>
+            <!-- Email/Github/Youtube -->
+            
             {%- if page.profile.address %}
             <div class="address">
               <p>{{ page.profile.address }}</p>
