--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -11,11 +11,11 @@
             {%- include figure.html 
               path=project.img 
               width=300
-              height=200
+              height=160
               alt="project thumbnail" -%}
           {%- endif %}
           <div class="card-body">
-            <h5 class="card-title text-lowercase">{{ project.title }}</h5>
+            <h6 class="card-title ">{{ project.title }}</h6>
             <p class="card-text">{{ project.description }}</p>
             <div class="row ml-0 mr-1 p-0">
               {%- if project.github -%}
