docs: ✏️ update samll bug

--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -30,7 +30,7 @@ layout: default
               -%}
             {% endif -%}
             <!-- {% include social.html %} -->
-            <a href="wyl410922@qq.com">Email</a>
+            <a href="mailto:wyl410922@qq.com">Email</a>
             <a href="https://github.com/yanliang-wang">Github</a>
             <a href="https://youtube.com/channel/UCo3nTD83zMDl3ZSwxRlepDw">Youtube</a>
             <!-- Email/Github/Youtube -->
