docs: ✏️ add ongoing project to projects

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -6,7 +6,7 @@
 
 p, h1, h2, h3, h4, h5, h6, em, div, li, span, strong {
   color: var(--global-text-color);
-  font-family: sans-serif; //'Noto Sans';//Oxygen;//-apple-system,;//Cantarell;//'Helvetica Neue';//Ubuntu;//BlinkMacSystemFont;//Roboto;//'Segoe UI';//sans-serif;
+  font-family: Roboto; //'Noto Sans';//Oxygen;//-apple-system,;//Cantarell;//'Helvetica Neue';//Ubuntu;//BlinkMacSystemFont;//Roboto;//'Segoe UI';//sans-serif;
   // Roboto还不错，
   font-weight: 400;
   // font-style: normal;
